[package]
name = "wiki-utils"
version = "0.1.0"
edition = "2021"
description = "Some wikipedia thing"
repository = "https://github.com/Squidroot2/wiki-utils"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
flurry = "0.5.1"
futures = "0.3.30"
log = "0.4.22"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
simplelog = "0.12.2"
time = "0.3.36"
tokio = {version = "1.37.0", features = ["full"]}
